--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-sanitizer": "^1.0.5",
+    "method-override": "^3.0.0",
     "mongoose": "^5.6.7"
   }
 }
